test: :white_check_mark: Add test with multiple finishes